--- a/Pipfile
+++ b/Pipfile
@@ -6,18 +6,18 @@ name = "pypi"
 [packages]
 "flake8" = "==3.7.9"
 autoflake = "==1.3.1"
-black = "==19.10b0"
+black = ">=20.8b1"
 bumpversion = "==0.5.3"
-click = "==7.1.1"
+click = ">=7.1.2"
 colorama = "==0.4.3"
 docformatter = "==1.3.1"
-isort = "==4.3.21"
+isort = ">=5.6.4"
 mypy = "==0.770"
 pdbpp = "==0.10.2"
 pytest = "==5.4.1"
 pytest-cov = "==2.8.1"
 ramos = "==1.4.0"
-toml = "==0.10.0"
+toml = ">=0.10.1"
 towncrier = "==19.2.0"
 unify = "==0.5"
 
